# frclib-6107

./: .bandit  .coveragerc  .gitignore  .pylintrc  AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  run_tests.bat  tox.ini
.github/: copilot-instructions.md
.github/agents/: ctre-phoenix-api.chatmode.md.agent.md
.github/prompts/: generate-unit-tests.prompt.md
docs/: README.md
example/: README.md  constants.py  physics.py  pyproject.toml  robot.py  robotcontainer.py
example/tests/: pyfrc_test.py
guidance/: PHOENIX6_APIs.md
lib_6107/: constants.py
lib_6107/commands/camera/: approach_tag.py  find_object.py  follow_object.py  track_tag_command.py  turn_to_object.py
lib_6107/commands/drivetrain/: swervetopoint.py  trajectory.py
lib_6107/commands/vision/: approach_tag.py  follow_object.py  set_camera_pipeline.py  track_tag_command.py  turn_to_object.py
lib_6107/pykit/: LoggedMechanismObject2d.py  alertlogger.py  autolog.py  logdatareciever.py  logger.py  logreplaysource.py  logtable.py  logvalue.py
lib_6107/pykit/inputs/: loggableds.py  loggablesystemstats.py
lib_6107/pykit/networktables/: loggeddashboardchooser.py  loggednetworkboolean.py  loggednetworknumber.py  loggednetworkstring.py  loggednetworkvalue.py
lib_6107/pykit/wpilog/: wpilogreader.py  wpilogwriter.py
lib_6107/subsystems/: operator_interface.py
lib_6107/subsystems/gyro/: gyro.py  pigeon2.py
lib_6107/subsystems/pykit/: ctre_swervedrive.py  dual_mechanism_io.py  gyro_io.py  rotation_mechanism_io.py  rpm_mechanism_io.py
lib_6107/subsystems/rpm/: ctre_rpm_subsystem.py  rev_rpm_subsystem.py  rpm_subsystem.py
lib_6107/subsystems/vision/: limelightvision.py  photonvision.py  photonvision_sim.py  visionsubsystem.py
lib_6107/subsystems/vision/odometry/: limelight_odometry.py
lib_6107/util/: asyncio_wrapper.py  competition.py  elastic_utils.py  fliputil.py  numerical_chooser.py  phoenix6_utils.py  rev_utils.py  statistics.py
src/lib_6107/: constants.py  physics.py  robot.py  robotcontainer.py
src/lib_6107/commands/: _command_template.py  _commandgroup_template.py  command.py  constants.py  pathplanner.py
src/lib_6107/commands/drivetrain/: _command_template.py  aimtodirection.py  arcade_drive.py  gotopoint.py  reset_xy.py  swervetopoint.py  trajectory.py
src/lib_6107/commands/vision/: approach_tag.py  find_object.py  follow_object.py  set_camera_pipeline.py  track_tag_command.py  turn_to_object.py
src/lib_6107/pykit/: LoggedMechanism2d.py  LoggedMechanismLigament2d.py  LoggedMechanismObject2d.py  LoggedMechanismRoot2d.py  LoggedNetworkButton.py  alertlogger.py  autolog.py  logdatareceiver.py  loggedrobot.py  logger.py  logreplaysource.py  logtable.py  logtracer.py  logvalue.py
src/lib_6107/pykit/inputs/: loggableds.py  loggablepowerdistribution.py  loggablesystemstats.py
src/lib_6107/pykit/networktables/: loggeddashboardchooser.py  loggednetworkboolean.py  loggednetworkinput.py  loggednetworknumber.py  loggednetworkstring.py  loggednetworkvalue.py  nt4Publisher.py
src/lib_6107/pykit/wpilog/: wpilogreader.py  wpilogwriter.py
src/lib_6107/subsystems/: constants.py  operator_interface.py  subsystem.py
src/lib_6107/subsystems/gyro/: gyro.py  navx.py  navx_imu.py  pigeon2.py
src/lib_6107/subsystems/pykit/: ctre_swervedrive.py  dual_mechanism_io.py  robot_state.py  rotation_mechanism_io.py  swervedrive_io.py  vision_io.py
src/lib_6107/subsystems/rpm/: ctre_rpm_subsystem.py  rev_rpm_subsystem.py  rpm_subsystem.py
src/lib_6107/subsystems/vision/: limelightvision.py  photonvision.py  photonvision_sim.py  visionsubsystem.py
src/lib_6107/subsystems/vision/odometry/: limelight_ctre_odometry.py  limelight_odometry.py
src/lib_6107/util/: alerts.py  asyncio_wrapper.py  competition.py  elastic_utils.py  field.py  fliputil.py  phoenix6_utils.py  preflight.py  rev_utils.py  statistics.py
tests/pykit/: test_autolog.py  test_loggednetworkbutton.py  test_logger.py  test_logtable.py  test_logtracer.py  test_logvalue.py
tests/pykit/networktables/: test_loggeddashboardchooser.py  test_loggednetworkinput.py  test_loggednetworkvalue.py
tests/pykit/wpilog/: test_wpilogconstants.py  test_wpilogreader.py  test_wpilogwriter.py
tests/util/: test_alerts.py  test_competition.py  test_elastic_utils.py
