[build-system]
# Specifies the tools needed to build the package
#requires = ["hatchling"]
#build-backend = "hatchling.build"
requires = ["setuptools>=82.0.1", "wheel"]
build-backend = "setuptools.build_meta"

# Enable uv to manage this project
[tool.uv]
managed = true

# Describe the projec t
[project]
name = "frclib-6107"
version = "2026.0.0"
description = "Python helper library focused on the CyberJagzz FRC Team 6107 robot requirements"
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]
keywords = ["FRC", "robot", "FIRST", "Jemison", "CyberJagzz", "6107"]
authors = [
  {name = "Chip Boling", email = "chip@bcsw.net"}
]

#################
requires-python = ">=3.14"
classifiers = [
"Development Status :: 2 - Pre-Alpha",
"Intended Audience :: Developers",
"Topic :: Software Development :: Build Tools",

"Programming Language :: Python :: 3.14",
]
# Core dependencies installed via pip
dependencies = [
"wpilib                  >= 2026.2.2",
"robotpy                 >= 2026.2.2",
"robotpy-apriltag        >= 2026.2.2",
"robotpy-commands-v2     >= 2026.2.2",
"robotpy-pathplannerlib  >= 2026.1.2",
"robotpy-cli             >= 2026.0.1",
"phoenix6                >= 26.1.3",
"robotpy-rev             >= 2026.0.4",
"robotpy-cscore          >= 2026.2.2",
"pyntcore                >= 2026.2.2",
"photonlibpy             >= 2026.3.2",
"limelightlib-python     >= 0.9.6",
]

[dependency-groups]
dev = [
    "uv       >= 0.11.6",
    "pytest   >= 9.0.3",
]

[project.urls]
Homepage = "https://cyberjagzz.org"
Documentation = "https://github.com/6107/frclib-6107/docs"

[tool.pytest.ini_options]
# Configuration for development tools like pytest
testpaths = ["tests"]
