#
# Use this configuration file to control what RobotPy packages are installed
# on your RoboRIO
#
[project]
name = "frclib_6107 Example Robot"
version = "0.1.0"
description = "Example FRC Robot Code"
readme = "README.md"
requires-python = "==3.14"

[tool.robotpy]

# Version of robotpy this project depends on
robotpy_version = "2026.2.2"

# Which optional robotpy components should be installed?
# -> equivalent to `pip install robotpy[extra1, ...]
components = [
    #"all",
    # "apriltag",
    "commands2",
    "cscore",
    "sim",
    # "xrp",
]

# Other pip packages to install, such as vendor packages (each element
# is equivalent to a line in requirements.txt)
requires = [
    "lib_6107",
    "phoenix6==26.1.3",
    "robotpy-rev==2026.0.4",
]
